--- a/index.html
+++ b/index.html
@@ -142,6 +142,20 @@
 
             </div>
         </section>
+        <!-- /section3 -->
+        <!-- section4 -->
+        <section class="section4">
+            <div class="container">
+                <h2>be part of the best club in britain.</h2>
+                <form action="" class="form">
+                    <input type="text" name="name" placeholder="Full Name">
+                    <input type="email" name="email" placeholder="Email Address">
+                    <input type="number" name="post-code" placeholder="Post Code">
+                    <br>
+                    <button>Subscribe</button>
+                </form>
+            </div>
+        </section>
     </main>
 </body>
 
