destop layout Compelet

--- a/index.html
+++ b/index.html
@@ -150,12 +150,51 @@
                 <form action="" class="form">
                     <input type="text" name="name" placeholder="Full Name">
                     <input type="email" name="email" placeholder="Email Address">
-                    <input type="number" name="post-code" placeholder="Post Code">
+                    <input type="text" name="post-code" placeholder="Post Code">
                     <br>
                     <button>Subscribe</button>
                 </form>
             </div>
         </section>
+        <!-- /section4 -->
+        <!-- section5 -->
+        <section class="section5">
+            <div class="container">
+                <div class="flex">
+                    <div class="flex-box-1">
+                        <img src="./assets/img/fairtrade.png" alt="">
+                    </div>
+                    <div class="flex-box-2">
+                        <h3>our mission</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid magnam voluptatem cupiditate blanditiis ipsum aliquam quae culpa ullam, doloremque necessitatibus rerum nemo nulla harum sit.</p>
+                    </div>
+                    <div class="flex-box-3">
+                        <img src="./assets/img/pro3.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- /section5 -->
+        <footer>
+            <div class="container">
+                <div class="flex">
+                    <div class="flex-box-1">
+                        <h4>vim & vigour</h4>
+                    </div>
+                    <div class="flex-box-2">
+                        <h5>follow us</h5>
+                    </div>
+                    <div class="flex-box-3">
+                        <ul>
+                            <li><img src="./assets/img/twitter.png" alt=""></li>
+                            <li><img src="./assets/img/facebook-app-symbol.png" alt=""></li>
+                            <li><img src="./assets/img/instagram.png" alt=""></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
     </main>
 </body>
 
