--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Vim & Vigour</title>
     <link rel="stylesheet" href="./assets/style/style.css">
     <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
+    <!-- for responsive -->
+    <link rel="stylesheet" href="./assets/style/responsive.css">
     <!-- GoogleFont -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -58,6 +60,7 @@
                 <div class="hero-heading">
                     <h1>ROASTED TO ORDER.<br>DELIVER TO YOUR DOOR.</h1>
                     <div under-line></div>
+                </div>
                     <div class="flex">
 
                         <div class="flex-box-1 about-box">
@@ -83,7 +86,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                
             </div>
         </section>
         <!-- /herosection -->
